IDE-suggested cleanups